objects/Shipment_Team_Member_Individual_KPI__c/Shipment_Team_Member_Individual_KPI__c.object-meta.xml
<CustomObject>
    <label>Shipment Team Member + Individual KPI</label>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Shipment Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Team Member + Individual KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>