objects/Shipment_Team_Member_Individual_KPI__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>