objects/Shipment_Team_Member_Individual_KPI__c/fields/Individual_KPI__c.field-meta.xml
<CustomField>
    <fullName>Individual_KPI__c</fullName>
    <label>Individual KPI</label>
    <referenceTo>Individual_KPI__c</referenceTo>
    <relationshipLabel>Shipment Team Member + Individual KPIs</relationshipLabel>
    <relationshipName>Shipment_Team_Member_Individual_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>