objects/Shipment_Team_Member_Individual_KPI__c/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Profit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>