objects/Shipment_Team_Member_Individual_KPI__c/fields/Shipment_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Team Member</label>
    <referenceTo>Shipment_Team_Member__c</referenceTo>
    <relationshipLabel>Shipment Team Member + Individual KPIs</relationshipLabel>
    <relationshipName>Shipment_Team_Member_Individual_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>